--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.16.0"
+    "react-query": "^3.16.0",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
-    "@types/react": "^17.0.5",
-    "typescript": "^4.2.4"
+    "@types/react": "^17.0.5"
   }
 }
