--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.13",
     "next": "10.2.0",
+    "prisma": "^2.22.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.16.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
