--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@chakra-ui/react": "^1.6.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@prisma/client": "^2.22.1",
     "framer-motion": "^4.1.13",
     "next": "10.2.0",
-    "prisma": "^2.22.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.16.0"
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "prisma": "^2.22.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
