--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "^2.22.1",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.13",
     "next": "10.2.0",
     "react": "17.0.2",
