--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.5.1",
     "@prisma/client": "^2.22.1",
     "axios": "^0.21.1",
+    "faker": "^5.5.3",
     "framer-motion": "^4.1.13",
     "next": "10.2.0",
     "next-auth": "^3.23.1",
@@ -25,6 +26,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.5",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "prisma": "^2.22.1",
